# fronius-mcp

./: README.md  pyproject.toml  server.json  server.py
.github/workflows/: ci.yml  publish.yml
src/fronius_mcp/: cli.py  client.py  config.py  server.py  toolsets.py
tests/: test_client.py  test_integrity.py
