[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fronius-mcp"
version = "0.1.0"
description = "MCP server for Fronius Symo GEN24 solar system"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
fronius-mcp = "server:mcp"
