[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fronius-mcp"
version = "0.1.0"
description = "MCP server for Fronius Symo GEN24 solar system"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "click>=8.0.0",
]

[project.scripts]
fronius-mcp = "fronius_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fronius_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
